<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/background_day">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/city_name"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline" />

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/current_date"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/country_name" />

    <TextView
        android:id="@+id/city_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        tools:text="@string/temperature"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/date_textview" />

    <TextView
        android:id="@+id/percieved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/perceived_temp"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/city_temperature" />

    <ImageView
        android:id="@+id/dayOrNight_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/city_temperature"
        tools:srcCompat="@drawable/ic_sun" />

</androidx.constraintlayout.widget.ConstraintLayout>